--- a/Mvc_ProjeKampi/Views/AdminCategory/Index.cshtml
+++ b/Mvc_ProjeKampi/Views/AdminCategory/Index.cshtml
@@ -23,8 +23,8 @@
                 <td>@item.CategoryId</td>
                 <td>@item.CategoryName</td>
                 <td>@item.CategoryDescription</td>
-                <td><a href="#" class="btn btn-danger">Sil</a></td>
-                <td><a href="#" class="btn btn-success">Güncelle</a></td>
+                <td><a href="/AdminCategory/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
+                <td><a href="/AdminCategory/EditCategory/@item.CategoryId" class="btn btn-success">Güncelle</a></td>
                 <td><a href="#" class="btn btn-warning">Başlıklar</a></td>
             </tr> 
         }
