--- a/Mvc_ProjeKampi/Views/Writer/Index.cshtml
+++ b/Mvc_ProjeKampi/Views/Writer/Index.cshtml
@@ -30,13 +30,13 @@
                         <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
                             <div class="card bg-light">
                                 <div class="card-header text-muted border-bottom-0">
-                                    Digital Strategist
+                                    @item.WriterTitle
                                 </div>
                                 <div class="card-body pt-0">
                                     <div class="row">
                                         <div class="col-7">
                                             <h2 class="lead"><b>@item.WriterName @item.WriterSurname</b></h2>
-                                            <p class="text-muted text-sm"><b>About: </b> Web Designer / UX / Graphic Artist / Coffee Lover </p>
+                                            <p class="text-muted text-sm"><b>About: </b>@item.AboutWriter</p>
                                             <ul class="ml-4 mb-0 fa-ul text-muted">
                                                 <li class="small"><span class="fa-li"><i class="fas fa-mail-bulk"></i></span> Mail: @item.WriterMail</li>
                                                 
