--- a/Mvc_ProjeKampi/Views/Heading/Index.cshtml
+++ b/Mvc_ProjeKampi/Views/Heading/Index.cshtml
@@ -7,14 +7,24 @@
 @{ string color = ""; }
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        .table-avatar {
+            width: 50px; /* Sabit genişlik */
+            height: 50px; /* Sabit yükseklik */
+            border-radius: 50%; /* Eğer resmi yuvarlak yapmak isterseniz */
+            object-fit: cover; /* Resmi çerçeveye sığdırır ve kesme yapar */
+        }
 
+    </style>
+</head>
 <body class="hold-transition sidebar-mini">
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Projects</h1>
+                    <h1>Başlık Sayfası</h1>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
@@ -24,7 +34,7 @@
         <!-- Default box -->
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Proje İşlemleri</h3>
+                <h3 class="card-title">Başlık İşlemleri</h3>
                 <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
                         <i class="fas fa-minus"></i>
@@ -84,7 +94,7 @@
                                     </a>
                                     <br />
                                     <small>
-                                        @item.HeadingDate.ToShortDateString()
+                                        @(((DateTime)item.HeadingDate).ToString("dd-MMM-yyyy"))
                                     </small>
                                 </td>
                                 <td>
@@ -98,23 +108,24 @@
                                     <span class="@color">@item.Category.CategoryName</span>
                                 </td>
                                 <td class="project-actions text-right">
-                                    <a class="btn btn-primary btn-sm" href="#">
+                                    <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingId">
                                         <i class="fas fa-folder">
                                         </i>
-                                        View
+                                        Yazılar
                                     </a>
                                     <a class="btn btn-info btn-sm" href="#">
                                         <i class="fas fa-pencil-alt">
                                         </i>
-                                        Edit
+                                        Düzenle
                                     </a>
                                     <a class="btn btn-danger btn-sm" href="#">
                                         <i class="fas fa-trash">
                                         </i>
-                                        Delete
+                                        Sil
                                     </a>
                                 </td>
                             </tr>
+
                         }
                     </tbody>
                 </table>
@@ -125,6 +136,7 @@
     </section>
 </body>
 </html>
+<a href="/Heading/AddHeading/" class="btn btn-primary">Yeni Başlık Girişi</a>
 
 
 
